--- a/order-consumer-service/src/main/resources/application.yml
+++ b/order-consumer-service/src/main/resources/application.yml
@@ -5,5 +5,8 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: order-consumer-group
+      group-id: order-consumers
       auto-offset-reset: earliest
+    producer:
+      key-serializer:   org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
