--- a/order-consumer-service/src/main/resources/application.yml
+++ b/order-consumer-service/src/main/resources/application.yml
@@ -1,12 +1,8 @@
-server:
-  port: 8081
-
 spring:
+  main:
+    web-application-type: none
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
       group-id: order-consumers
       auto-offset-reset: earliest
-    producer:
-      key-serializer:   org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
