--- a/order-producer-service/src/main/resources/application.yml
+++ b/order-producer-service/src/main/resources/application.yml
@@ -1,7 +1,6 @@
-server:
-  port: 8080
-
 spring:
+  main:
+    web-application-type: none
   kafka:
     bootstrap-servers: localhost:9092
     # If this service ONLY produces events (no consumers), you don't need consumer config
